--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Application Opi",
+    "name": "Opilam",
     "short_name": "Opi App",
     "start_url": "/index.php",
     "background_color": "#6777EF",
