--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Opilam",
-    "short_name": "Opi App",
+    "short_name": "opi",
     "start_url": "/index.php",
     "background_color": "#6777EF",
     "description": "IoT domaine",
